# HyperGraphify

./: LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
examples/: basic_example.py  comprehensive_test.py
hypergraphify/examples/: basic_example.py
hypergraphify/src/transform/: decomposer.py
hypergraphify/tests/: test_verifier.py
src/hypergraphify/: __init__.py  __main__.py  api.py  decomposer.py
src/hypergraphify/transform/: decomposer.py
src/hypergraphify/validation/: verifier.py
tests/: test_basic_flow.py  test_cli.py  test_equivalence_sanity.py  test_pymatching_integration.py
