[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypergraphify"
version = "0.1.0"
authors = [
  {name = "Your Name", email = "your.email@example.com"},
]
description = "Transform quantum LDPC codes for MWPM decoding"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "stim>=1.10",
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pymatching>=2.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/HyperGraphify"
"Bug Tracker" = "https://github.com/yourusername/HyperGraphify/issues"

[tool.setuptools.packages.find]
where = ["src"]
